contact_us site_map view add

--- a/upload/catalog/view/theme/medic/template/common/header.twig
+++ b/upload/catalog/view/theme/medic/template/common/header.twig
@@ -1064,7 +1064,7 @@
     </style>
 </head>
 
-<body class="common-home  cart-block-type-4   megamenu-type-2   no-box-type-7   footer-type-10 breadcrumb-style-2 border-width-1 body-white    body-header-type-8">
+<body class="{{ body_class }}  cart-block-type-4   megamenu-type-2   no-box-type-7   footer-type-10 breadcrumb-style-2 border-width-1 body-white    body-header-type-8">
     <div style="background: #eeeeee">
         <div class="standard-body">
             <div class="full-width">
