商品相关页面添加，修改

--- a/upload/catalog/view/theme/default/template/product/product.twig
+++ b/upload/catalog/view/theme/default/template/product/product.twig
@@ -159,7 +159,8 @@
             {% endif %}
           </ul>
           {% endif %}
-          <div id="product"> {% if options %}
+          <div id="product">
+              {% if options %}
             <hr>
             <h3>{{ text_option }}</h3>
             {% for option in options %}
